# ferm

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  Dependencies.cmake  ProjectOptions.cmake  README.md  flake.nix  shell.nix
.cache/clangd/index/: Order.hpp.4089B120CA29AF94.idx  OrderBook.cpp.D2089B3FB2C71FC7.idx  OrderBook.hpp.7EB0DD5B331E6030.idx  OrderType.hpp.F58466F7C3DEBF43.idx  constexpr_tests.cpp.44F9ECE1AFDAABE2.idx  core.cpp.041B63088705E566.idx  core.cpp.6D24CD018CB35630.idx  core.hpp.2D4FF50069B5D3C1.idx  european_call.cu.2F97806793024F00.idx  european_call.hpp.478981FC8E5F9880.idx  ferm.hpp.14923F414BAC1EA4.idx  fuzz_tester.cpp.F225A7533E664CED.idx  main.cpp.27C92236C4E0CDB7.idx  main.cpp.5E149B2CD12D31DE.idx  main.cpp.60B5B57EE76C8B72.idx  (+6 more)
.github/: constants.env
cmake/: Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Tests.cmake
configured_files/: config.hpp.in
fuzz_test/: CMakeLists.txt
include/ferm/: Order.hpp  OrderBook.hpp  OrderType.hpp  european_call.hpp  ferm.hpp  mc.hpp  sample_library.hpp
src/: CMakeLists.txt
src/ferm/: CMakeLists.txt  OrderBook.cpp
src/ferm/cuda/: mc.cu
src/ferm/kernels/: european_call.cu
src/ferm_cli/: CMakeLists.txt  main.cpp
src/ftxui_sample/: CMakeLists.txt  main.cpp
src/sample_library/: CMakeLists.txt  sample_library.cpp
test/: CMakeLists.txt  constexpr_tests.cpp  order_tests.cpp  orderbook_test.cpp  tests.cpp
